##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = pybel_git
version = 0.0.2-dev
url = https://github.com/cthoyt/pybel-git
download_url = https://github.com/cthoyt/pybel-git/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/pybel-git/issues
    Source Code = https://github.com/cthoyt/pybel-git
author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
license = MIT
license_file = LICENSE
description = PyBEL Git utilities
long_description = file: README.rst
keywords =
    Biological Expression Language
    Protein Protein Interaction Networks

[options]
install_requires =
    pybel
    click
    easy-config
    gitpython
python_requires = >=3.6
packages = find:
package_dir =
    = src
zip-safe = false

[options.entry_points]
console_scripts =
    pybel-git = pybel_git.cli:main

[options.packages.find]
where = src

# configuring bdist_wheel
[bdist_wheel]
python-tag = py36
