##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = pybel_git
version = 0.0.3-dev
description = PyBEL Git utilities
long_description = file: README.rst

url = https://github.com/pybel/pybel-git
download_url = https://github.com/pybel/pybel-git/releases
project_urls =
    Bug Tracker = https://github.com/pybel/pybel-git/issues
    Source Code = https://github.com/pybel/pybel-git

license = MIT
license_file = LICENSE

author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License


keywords =
    Biological Expression Language
    Protein Protein Interaction Networks

[options]
install_requires =
    pybel>=0.14.0
    click
    easy-config
    gitpython
python_requires = >=3.6
packages = find:
package_dir =
    = src
zip-safe = false

[options.entry_points]
console_scripts =
    pybel-git = pybel_git.cli:main

[options.packages.find]
where = src
